[package]
name = "riff"
version = "1.0.3"
edition = "2021"
repository = "https://github.com/DeterminateSystems/riff"

[package.metadata.riff.targets.aarch64-apple-darwin]
build-inputs = [
  "darwin.apple_sdk.frameworks.Security"
]

[package.metadata.riff.targets.x86_64-apple-darwin]
build-inputs = [
  "darwin.apple_sdk.frameworks.Security"
]

[dependencies]
atty = "0.2"
cfg-if = "1"
clap = { version = "4.0.26", features = ["derive", "env"] }
color-eyre = { version = "0.6.2", features = [ "issue-url" ] }
eyre = "0.6.8"
indicatif = "0.17.3"
is_ci = "1.1"
itertools = "0.10"
os-release = "0.1"
owo-colors = "3"
reqwest = "0.11"
secrecy = { version = "0.8.0", features = ["serde"] }
semver = { version = "1.0", features = [ "serde" ] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.95"
target-lexicon = "0.12.5"
tempfile = "3.3"
thiserror = "1.0.38"
tokio = { version = "1.26.0", features = ["macros", "sync", "rt-multi-thread", "process", "fs", "io-util"] }
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = [ "v4", "fast-rng", "serde" ]}
xdg = "2"
zeroize = "1.5.7"

[target.'cfg(target_os = "linux")'.dependencies]
etc-passwd = "0.2"

[dev-dependencies]
tokio-test = "0.4.2"
